# shepherd-rs

./: .gitignore  Cargo.toml
routing-engine/: Cargo.toml
routing-engine/src/: engine.rs  main.rs
routing-engine/src/engine/: ordering.rs  preprocess.rs  query.rs  utils.rs  visitor.rs
routing-engine/src/engine/csr/: csr_graph.rs
routing-engine/src/engine/export/: csv_export.rs
routing-engine/src/engine/preprocess/: builder.rs  ch_preprocess.rs  graph.rs  witness_search.rs
routing-engine/src/engine/query/: ch_query.rs
routing-engine/src/engine/visitor/: shortcut_visitor.rs  visitable.rs
src/: engine.rs  main.rs
src/engine/: builder.rs  ch_preprocesses.rs  ch_query.rs  csr.rs  export.rs  graph.rs  utils.rs  witness_search.rs
src/engine/csr/: csr_graph.rs
src/engine/export/: export_provider.rs
src/engine/ordering/: provider.rs
src/engine/preprocess/: builder.rs  ch_preprocess.rs  graph.rs  witness_search.rs
src/engine/query/: ch_query.rs
tests/data/: nz-car-only.osm.pbf
